<resources>
    <string name="app_name">Tawseelat</string>
    <string name="login">Login</string>
    <string name="login_underline">&lt;u&gt;login&lt;/u&gt;</string>
    <string name="email_or_phone_text">Email/phone</string>
    <string name="email_text">Email</string>
    <string name="password_text">password</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_underline">&lt;u&gt;Create Account&lt;/u&gt;</string>
    <string name="required">Required*</string>
    <string name="your_name_text">Your name</string>
    <string name="subject_text">Subject</string>
    <string name="submit_text">Submit</string>
    <string name="letter_text">Letter</string>
    <string name="telephone_number_text">Phone number</string>
    <string name="home_text">Home</string>
    <string name="filter_text" translatable="false">filter</string>
    <string name="my_profile_text">My profile</string>
    <string name="update_data_account_text">update data account</string>
    <string name="update_password_text">Change Password</string>
    <string name="current_password_text">Current Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_new_password_text">Confirm New Password</string>

    <string name="client_name_text">Client Name</string>
    <string name="demo_client_name_text">abdalaziz abdallah</string>
    <string name="demo_phone_text">+970592639219</string>

    <string name="login_as_employee">Login as employee</string>
    <string name="country_code_text">Country Code</string>

    <string name="check_email_message">please check your Email.</string>
    <string name="didnT_receive_tap_to_send_message">Did not receive it? Tap to send again.</string>
    <string name="enter_code_message">Enter the code we just texted you.</string>
    <string name="verify_code">Verify Code</string>

    <string name="demo_dob_text" translatable="false">30/1/2000</string>
    <string name="demo_id_name_text" translatable="false">412251837</string>
    <string name="demo_gender_text">male</string>
    <string name="demo_email_text" translatable="false">abdalazizabdalalluh3@gmail.com</string>
    <string name="demo_my_info_text">My Information</string>
    <string name="feedback_complaints_text">Feedback and Complaints</string>
    <string name="language_text">languages</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="workspace_array">
        <item>Employee Workspace</item>
        <item>Manager Workspace</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="type_transportation_array">
        <item>Taxis</item>
        <item>Delivery</item>
    </string-array>

    <string-array name="step_array">
        <item>Welcome</item>
        <item>Personal Information</item>
        <item>Personal Licenses</item>
    </string-array>

    <string name="not_matching">please make sure your new password matching</string>
    <string name="your_id_text">Your ID</string>
    <string name="gender_text">gender</string>
    <string name="select_dob">Select your DOB</string>
    <string name="my_trips_text">My trips</string>

    <string name="details_text">Details</string>
    <string name="demo_source_place_text">Gaza - Alnaser street - Malash tower</string>
    <string name="demo_destination_place_text">Gaza - Asha Hospital</string>
    <string name="demo_date_time_text" translatable="false">30/1/2020 - 10:20:59 AM</string>
    <string name="finished_date_text">Finished date  </string>
    <string name="accepted_date_text">Accepted date  </string>
    <string name="employee_name_text">Employee Name  </string>
    <string name="demo_employee_name_text">Mohammed Ahmed</string>
    <string name="company_name_text">Company name</string>
    <string name="demo_company_name_text">Asayle Taxis</string>
    <string name="demo_nearest_place_text">Kazem Ices</string>
    <string name="nearest_place_text">nearest place</string>
    <string name="no_trips_for_you_yet_text">No trips for you yet !</string>
    <string name="message_no_trips">You do not have any trips yet. Once you do the will appear here.</string>
    <string name="make_trip_now">Make Trip Now</string>
    <string name="logout_text">Logout</string>
    <string name="message_logout">You are now logged out</string>
    <string name="number_not_valid"> number is not Valid</string>
    <string name="incorrect_phone_or_password">Incorrect phone number or password</string>
    <string name="incorrect_email_or_password">Incorrect email address or password</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="check_your_internet">Check your internet</string>
    <string name="demo_city_text">Gaza City</string>
    <string name="taxis_text">Taxis</string>
    <string name="all_text">All</string>
    <string name="delivery_text">Delivery</string>
    <string name="cities_text">Cities</string>
    <string name="search_text">Search</string>
    <string name="message_disconnect">Could not connect to the internet !</string>
    <string name="retry_text">Retry</string>
    <string name="message_for_permission">you need to accept permission to continue</string>

    <string name="switch_between_workspace_text">Switch workspace</string>
    <string name="message_not_employee">Opps! You are not Employee</string>
    <string name="sign_up_as_employee">Sign up as Employee</string>
    <string name="enter_id_text">ID image</string>
    <string name="enter_vehicle_license_text">Vehicle license image</string>
    <string name="enter_driving_license_text">Driving license image</string>

    <string name="enter_front_of_id_text">Enter the front interface of the ID</string>
    <string name="enter_front_of_vehicle_license_text">Enter the front interface of the Vehicle license</string>
    <string name="enter_front_of_driving_license_text">Enter the front interface of the Driving license</string>

    <string name="next_text">Next</string>

    <string name="welcome_message">Welcome to signing in Tawseelat</string>
    <string name="welcome_message2">Glad you joined us. Thx ^_^</string>

    <string name="enter_personal_image_text">Personal image</string>
    <string name="enter_front_personal_picture_text">Enter your personal picture with white background</string>

    <string name="message_ready_account">An email will be sent to notify you that your account is ready in the next 72 hours.</string>

    <string name="check_email_message_in_72_hour">please check your Email in the next 72 hours</string>
    <string name="load_license_text">Load License</string>
    <string name="join_us_text">Join us</string>
    <string name="i_am_manager">I am Manager</string>
    <string name="scan_qrcode_message">Scan the QR code to hire in your favorite company</string>

    <string name="hire_employee_text">Hire Employee</string>
    <string name="please_wait">Please wait</string>
    <string name="no_qr_code_message">No QR code in Image please try again</string>
    <string name="not_matching_qr_code">QR code not matching please try again</string>
    <string name="create_company_transportation_text">Create Company Transportation</string>
    <string name="double_dots_text" translatable="false">:</string>
    <string name="location_company_text">Location company</string>
    <string name="type_transportation_text">Type Transportation</string>
    <string name="create_company_text">Create Company</string>

    <string name="congratulation_message">Congrats, on setting up your company in our application, so we give you 10 jobs for your employees as a gift from us.</string>
    <string name="check_email_message_manager_id">please check your Email, we sent Manager ID to login in your company.</string>
    <string name="manager_id_text">Manager ID</string>
    <string name="verify_id">verify id</string>
    <string name="message_location_permission">Location permission is disabled</string>
    <string name="request_location_text">Request location</string>
    <string name="where_do_you_want_text">Where do you want to go?</string>
    <string name="pick_source_text">Pick up source</string>
    <string name="confirm_drop_off_text">Confirm Drop-off</string>
    <string name="confirm_pick_up_text">Confirm Pick-up</string>
    <string name="pick_up_launch_point_text">Pick up your launch point</string>
    <string name="pick_up_distention_text">Pick up Distention</string>
    <string name="go_text" translatable="false">GO</string>
    <string name="confirm_text">Confirm</string>
    <string name="show_employees_text">Show Employees</string>
    <string name="no_employees_for_you_yet_text">No Employees for you yet , just you</string>
    <string name="message_no_employees">You do not have any employment yet. Once you do the will appear here.</string>


</resources>