<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MessageInfoEmployeeFragment">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/d6dp"
            android:gravity="center"
            android:text="@string/message_ready_account"
            android:textAppearance="?textAppearanceHeadline5"
            android:textColor="@color/my_purple_Dark" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/d6dp"
            android:gravity="center"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/welcome_message2"
            android:textAppearance="?textAppearanceHeadline5"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_email_message_in_72_hour"
            android:textAppearance="?textAppearanceBody1"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_profile_button"
            style="@style/MyStylePrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d35dp"
            android:padding="@dimen/d10dp"
            android:text="@string/my_profile_text"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/d150dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>