<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.WelcomeFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/d200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/d15dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/make_trip_now"
                android:gravity="center"
                android:src="@drawable/welcome" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/welcome_message"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/welcome_message2"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/join_us_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/d15dp"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                android:drawableTint="@color/white"
                android:gravity="center"
                android:text="@string/join_us_text"
                android:textAllCaps="false"
                android:textSize="@dimen/f18sp"
                tools:targetApi="m" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>
</layout>