<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/my_purple_light"
        app:cardCornerRadius="@dimen/d35dp"
        app:cardElevation="@dimen/d0dp"
        app:contentPadding="@dimen/d15dp"
        tools:context=".view.CongratulationCreateCompanyDialog">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="@dimen/d16dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_congrats" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/congratulation_message"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="@color/my_purple_Dark" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/check_email_message_manager_id"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/d10dp"
                android:text="@string/welcome_message2"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/join_us_button"
                style="@style/MyStylePrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/d10dp"
                android:text="@string/join_us_text"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/d150dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>
</layout>